--- a/css/index.css
+++ b/css/index.css
@@ -122,7 +122,7 @@ nav {
 
 .Teks {
     color: white;
-    
+    text-align: justify;
 }
 
 .Teks h1 {
